--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sequelize-cli": "^6.6.1",
     "typescript": "^5.0.4",
     "winston": "^3.11.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
